--- a/my-store/src/app/app.component.html
+++ b/my-store/src/app/app.component.html
@@ -25,9 +25,9 @@
 </p> -->
 <hr/>
 <h1>*ngFor Arrays</h1>
-<div>
+<div class="products--grid">
   <div *ngFor="let product of products">
-    <img width="250" [src]="product.image" alt="image">
+    <img [src]="product.image" alt="image">
     <h2>{{ product.price }}</h2>
     <p>{{ product.name }}</p>
   </div>
