--- a/my-store/src/app/app.component.scss
+++ b/my-store/src/app/app.component.scss
@@ -8,12 +8,15 @@
 .products--grid {
   display: flex;
   flex-direction: column;
+
   div {
     img {
       width: 100%;
       border-radius: 10px;
     }
-    h2, p {
+
+    h2,
+    p {
       margin: 0;
     }
   }
