Style in Angular

--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -14,25 +14,18 @@
   <img [src]="person().avatar" alt="">
   <input type="number" [value]="person().age">
   <button [disabled]="disabled">Click me</button>
-  <p>person: {{ person.name }}</p>
+  <p>person: {{ person().name }}</p>
   <hr />
   <button (click)="clickHandler()">click me</button>
   <button (dblclick)="clickHandler()">double me</button>
   <p>(change)</p>
   <input type="number" [value]="person().age" (change)="changeHandler($event)">
   <p>(change)</p>
-  <input type="text" [value]="person.name" (change)="changeHandler($event)">
+  <input type="text" [value]="person().name" (change)="changeHandler($event)">
   <p>(keydown)</p>
-  <input type="text" [value]="person.name" (keydown)="keydownHandler($event)">
+  <input type="text" [value]="person().name" (keydown)="keydownHandler($event)">
   <p>(keydown shift )</p>
-  <input type="text" [value]="person.name" (keydown.shift.t)="clickHandler()">
-  <hr />
-  <ul>
-    <p>total: {{ tasks().length }}</p>
-    <li *ngFor="let task of tasks(); index as i">
-      {{ i }} {{ task }}
-    </li>
-  </ul>
+  <input type="text" [value]="person().name" (keydown.shift.t)="clickHandler()">
   <hr />
   <h1>Signals</h1>
   <input type="text" [value]="name()" (change)="changeHandler($event)">
@@ -42,7 +35,7 @@
   <ul>
     <p>total: {{ tasks().length }}</p>
     <li *ngFor="let task of tasks(); index as i">
-      {{ i }} {{ task }}
+      {{ i }}  {{ task }}
     </li>
   </ul>
   <hr />
