Update Form Control

--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -63,7 +63,8 @@
     <p *ngSwitchCase="'valentina'">yo soy valentina</p>
     <p *ngSwitchDefault>yo no soy nadie</p>
   </div>
-  <hr />
+  <hr>
+  <h1>FormControl</h1>
   <input type="color" [formControl]="colorCtrl">
   <p>color: {{ colorCtrl.value }}</p>
   <svg>
