--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -73,6 +73,7 @@
     </g>
   </svg>
   <hr />
+  <h1>Attribute-binding</h1>
   <input type="number" [formControl]="widthCtrl">
   <span class="box" [style.width.px]="widthCtrl.value"></span>
   <hr />
