New Block For and Empty in Angular 17

--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -99,4 +99,13 @@
   <p>
     <input type="text">
   </p>
+  <hr>
+  <h2>New For</h2>
+  <ul>
+    @for(task of tasks(); track task; let i = $index) {
+      <li>{{ i }} {{ task }}</li>
+    } @empty {
+      <li><strong>La Lista esta en vacio.</strong></li>
+    }
+  </ul>
 </div>
