New Block Switch, Case, Default  in Angular 17

--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -108,4 +108,29 @@
       <li><strong>La Lista esta en vacio.</strong></li>
     }
   </ul>
+  <hr>
+  <h2>New Switch</h2>
+  <div>
+    @switch (person().name) {
+      @case ('nicolas') {
+        <p>yo soy nicolas</p>
+      }
+      @case ('julian') {
+        <p>yo soy julian</p>
+      }
+      @case ('ana') {
+        <p>yo soy ana</p>
+      }
+      @case ('valentina') {
+        <p>yo soy valentina</p>
+      }
+      @default {
+        <p>yo no soy nadie</p>
+      }
+    }
+
+
+
+  </div>
+
 </div>
