--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -2,9 +2,11 @@
   <h1>Hola mi primer proyecto</h1>
   <h2>{{ welcome }}</h2>
   <ul>
-    <li *ngFor="let task of tasks()">
+    @for (task of tasks(); track task) {
+    <li>
       {{ task }}
     </li>
+    }
   </ul>
   <hr />
   <h2>{{ 'Hola'.repeat(4) }}</h2>
@@ -34,48 +36,70 @@
   <hr />
   <ul>
     <p>total: {{ tasks().length }}</p>
-    <li *ngFor="let task of tasks(); index as i">
-      {{ i }}  {{ task }}
+    @for (task of tasks(); track task; let i = $index) {
+    <li>
+      {{ i }} {{ task }}
     </li>
+    }
   </ul>
   <hr />
   <h1>ngIf</h1>
-  <div *ngIf="1 !== 1">
+  @if (1 !== 1) {
+  <div>
     My contend
   </div>
-  <div *ngIf="name() === 'nicolas'">
+  }
+  @if (name() === 'nicolas') {
+  <div>
     Soy nicolas
   </div>
+  }
 
   @if (name() === 'nicolas') {
-    <div>Soy Nicolas</div>
+  <div>Soy Nicolas</div>
   }
 
   <input type="text" [value]="person().name" (change)="changeName($event)">
   <input type="number" [value]="person().age" (change)="changeAge($event)">
-  <div *ngIf="person().name === 'nicolas' && person().age > 18; else miBloque">
+  @if (person().name === 'nicolas' && person().age > 18) {
+  <div>
     Soy nicolas y soy mayor de 18
   </div>
-  <ng-template #miBloque>
-    Soy nicolas y soy menor de 18
-  </ng-template>
+  } @else {
+
+  Soy nicolas y soy menor de 18
+
+  }
+
 
   <h2>If else new</h2>
   @if(person().name === 'nicolas' && person().age > 18) {
-    <div>Soy nicolas y soy mayor de 18</div>
+  <div>Soy nicolas y soy mayor de 18</div>
   } @else {
-    <div>Soy nicolas y soy menor de 18</div>
+  <div>Soy nicolas y soy menor de 18</div>
   }
 
   <hr />
   <h1>ngSwitchCase</h1>
   <input type="text" [value]="person().name" (change)="changeName($event)">
-  <div [ngSwitch]="person().name">
-    <p *ngSwitchCase="'nicolas'">yo soy nicolas</p>
-    <p *ngSwitchCase="'julian'">yo soy julian</p>
-    <p *ngSwitchCase="'ana'">yo soy ana</p>
-    <p *ngSwitchCase="'valentina'">yo soy valentina</p>
-    <p *ngSwitchDefault>yo no soy nadie</p>
+  <div>
+    @switch (person().name) {
+    @case ('nicolas') {
+    <p>yo soy nicolas</p>
+    }
+    @case ('julian') {
+    <p>yo soy julian</p>
+    }
+    @case ('ana') {
+    <p>yo soy ana</p>
+    }
+    @case ('valentina') {
+    <p>yo soy valentina</p>
+    }
+    @default {
+    <p>yo no soy nadie</p>
+    }
+    }
   </div>
   <hr>
   <h1>FormControl</h1>
@@ -83,7 +107,7 @@
   <p>color: {{ colorCtrl.value }}</p>
   <svg>
     <g>
-      <rect x="0" y="0" height="100" width="100" [attr.fill]="colorCtrl.value"/>
+      <rect x="0" y="0" height="100" width="100" [attr.fill]="colorCtrl.value" />
     </g>
   </svg>
   <hr />
@@ -103,30 +127,30 @@
   <h2>New For</h2>
   <ul>
     @for(task of tasks(); track task; let i = $index) {
-      <li>{{ i }} {{ task }}</li>
+    <li>{{ i }} {{ task }}</li>
     } @empty {
-      <li><strong>La Lista esta en vacio.</strong></li>
+    <li><strong>La Lista esta en vacio.</strong></li>
     }
   </ul>
   <hr>
   <h2>New Switch</h2>
   <div>
     @switch (person().name) {
-      @case ('nicolas') {
-        <p>yo soy nicolas</p>
-      }
-      @case ('julian') {
-        <p>yo soy julian</p>
-      }
-      @case ('ana') {
-        <p>yo soy ana</p>
-      }
-      @case ('valentina') {
-        <p>yo soy valentina</p>
-      }
-      @default {
-        <p>yo no soy nadie</p>
-      }
+    @case ('nicolas') {
+    <p>yo soy nicolas</p>
+    }
+    @case ('julian') {
+    <p>yo soy julian</p>
+    }
+    @case ('ana') {
+    <p>yo soy ana</p>
+    }
+    @case ('valentina') {
+    <p>yo soy valentina</p>
+    }
+    @default {
+    <p>yo no soy nadie</p>
+    }
     }
 
 
