--- a/store/src/app/domains/info/pages/about/about.component.html
+++ b/store/src/app/domains/info/pages/about/about.component.html
@@ -1,9 +1,9 @@
-<p>
-    <input type="number" [value]="duration()" (change)="changeDuration($event)">
-</p>
-<p>
-    <input type="text" [value]="message()" (change)="changeMessage($event)">
-</p>
-<p>
-    <app-counter [duration]="duration()" [message]="message()" *ngIf="duration() > 0"/>
-</p>
+<div>
+  <h1>About</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam enim, minima autem alias maiores quisquam? Nemo repudiandae itaque pariatur officiis nulla veritatis eos accusamus asperiores vel assumenda, iure nisi?</p>
+  <p>Numero de clientes <app-counter [duration]="duration()" [message]="message()" *ngIf="duration() > 0"/></p>
+  <div>
+    <app-wave-info audioUrl="assets/audio.mp3" />
+  </div>
+</div>
+
