Update About - Styles

--- a/store/src/app/domains/info/pages/about/about.component.html
+++ b/store/src/app/domains/info/pages/about/about.component.html
@@ -1,7 +1,7 @@
-<div>
-  <h1>About</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam enim, minima autem alias maiores quisquam? Nemo repudiandae itaque pariatur officiis nulla veritatis eos accusamus asperiores vel assumenda, iure nisi?</p>
-  <p>Numero de clientes <app-counter [duration]="duration()" [message]="message()" *ngIf="duration() > 0"/></p>
+<div class="px-10">
+  <h1 class="text-lg font-bold">About</h1>
+  <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam enim, minima autem alias maiores quisquam? Nemo repudiandae itaque pariatur officiis nulla veritatis eos accusamus asperiores vel assumenda, iure nisi?</p>
+  <p class="text-xs">Numero de clientes <app-counter [duration]="duration()" [message]="message()" *ngIf="duration() > 0"/></p>
   <div>
     <app-wave-info audioUrl="assets/audio.mp3" />
   </div>
