--- a/store/src/app/domains/shared/components/header/header.component.html
+++ b/store/src/app/domains/shared/components/header/header.component.html
@@ -1,8 +1,8 @@
 <nav>
   <div
-    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+    class="w-full flex flex-wrap items-center justify-between mx-auto py-4"
   >
-    <div class="flex items-center space-x-8">
+    <div class="flex items-center space-x-8 mt-5">
       <a href="https://flowbite.com/" class="flex items-center ">
         <img
           src="https://flowbite.com/docs/images/logo.svg"
