--- a/store/src/app/domains/products/pages/list/list.component.html
+++ b/store/src/app/domains/products/pages/list/list.component.html
@@ -1,10 +1,11 @@
 <div class="container mx-auto">
-  <app-header />
+  <app-header [cart]="cart()" />
+
   <div class="grid grid-cols-4 gap-8">
     <app-product
       *ngFor="let product of products()"
       [product]="product"
-      (addToCart)="fromChild($event)" />
+      (addToCart)="addToCart($event)" />
 
   </div>
 </div>
